# AP-Invoice-Exception-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
agents/: __init__.py  exception_triage_agent.py  vendor_risk_agent.py
agents/prompts/: assess_vendor_risk.md  investigate_exception.md
alembic/: env.py
alembic/versions/: 7375b6ea1e47_initial_schema_all_tables.py
api/: audit.py  exceptions.py  invoices.py  payments.py
app/: config.py  main.py
audit/: __init__.py  writer.py
db/: __init__.py  resolver.py  session.py
discount/: calculator.py  parser.py
extraction/: __init__.py  agent.py  contract_schemas.py  document_loader.py  llm_client.py  parser.py  po_schemas.py  schemas.py
extraction/prompts/: .gitkeep  v1_extract.md  v1_extract_contract.md  v1_extract_po.md
matching/: __init__.py  engine.py  tolerance.py
models/: __init__.py  audit_event.py  base.py  contract.py  discount_recommendation.py  enums.py  exception_record.py  invoice.py  match_result.py  payment_schedule.py  purchase_order.py  vendor.py
repositories/: __init__.py  contract_repo.py  po_repo.py  upsert_result.py  vendor_repo.py
routing/: __init__.py  decision.py
scripts/: seed_db.py
services/: __init__.py  exception_store.py  invoice_service.py  payment_store.py
tests/golden/: .gitkeep  scenario_01_clean_invoice.json  scenario_04_malformed_extraction.json
tests/integration/: test_audit_integration.py  test_document_resolution_integration.py  test_extraction_integration.py  test_pdf_upload_integration.py  test_pipeline_db_integration.py  test_routing_integration.py
tests/security/: adversarial_samples.py  conftest.py  test_injection.py
tests/unit/: test_config.py  test_contract_extraction.py  test_db_session.py  test_document_loader.py  test_exception_triage_agent.py  test_extraction.py  test_extraction_regression.py  test_field_confidence.py  test_matching.py  test_models.py  test_po_extraction.py  test_repositories.py  test_routing.py  test_upsert.py  test_vendor_auto_create.py  test_vendor_risk_agent.py
ui/: __init__.py  theme_preview.py
ui/components/: __init__.py  badges.py  navbar.py  pipeline_runner.py  theme.py
ui/pages/: __init__.py  audit_log.py  dashboard.py  discount_optimization.py  invoice_processing.py  system_info.py
